--- a/index.html
+++ b/index.html
@@ -97,8 +97,7 @@ a {
 <p class="auto-style55">&nbsp;</p>
 <p class="auto-style54" style="width: 876px"><span class="auto-style57">
 NAVIGATION FÜR DIE MEDIENFREIGABE VON SAVETHEINTERNET.INFO<br />
-Bei Fragen/Problemen etc. bitte im <a href="discord.savetheinternet.info">
-Discord</a> bei Flashyy/Soldiermelly melden.<br />
+Bei Fragen/Problemen etc. bitte im <a href="discord.savetheinternet.info">Discord</a> bei Flashyy/Soldiermelly melden.<br />
 <br />
 <br />
 </span><br class="auto-style57" />
@@ -191,7 +190,9 @@ Logos</span></a>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Kassel<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </strong>
 <a href="Flyer/Demos/KASSEL-finalprint.pdf"><span class="auto-style63">Mit Logos</span></a><strong> 
-| </strong>
+</strong>
+|<strong> 
+</strong>
 <a href="Flyer/RUECKSEITE.pdf">Rückseite</a><strong><br />
 <br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Kiel<br />
