--- a/Anderes.html
+++ b/Anderes.html
@@ -88,7 +88,7 @@ Hier gibts Logos etc.</span><br class="auto-style57" />
 <br class="auto-style57" />
 <span class="auto-style57"><a href="Anderes/LOGO_frei.png"><strong>L</strong></a><span class="auto-style60"><strong>ogo</strong></span></span><br class="auto-style57" />
 <br />
-<span class="auto-style57"><strong><a href="Anderes/#Saveyourinternet.png">#Saveyourinternet</a><br />
+<span class="auto-style57"><strong><a href="Anderes/Saveyourinternet.png">#Saveyourinternet</a><br />
 <br />
 <a href="Anderes/changeorgdeutschneu.png">Petitionsbanner</a></strong></span><br />
 <br />
