--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@ a {
 <p class="auto-style55">&nbsp;</p>
 <p class="auto-style54" style="width: 876px"><span class="auto-style57">
 NAVIGATION FÜR DIE MEDIENFREIGABE VON SAVETHEINTERNET.INFO<br />
-Bei Fragen/Problemen etc. bitte im <a href="discord.savetheinternet.info">Discord</a> bei Flashyy/Soldiermelly melden.<br />
+Bei Fragen/Problemen etc. bitte im 
+<a href="https://discord.savetheinternet.info">Discord</a> bei Flashyy/Soldiermelly melden.<br />
 <br />
 <br />
 </span><br class="auto-style57" />
