--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@ a {
 <p class="auto-style54" style="width: 876px"><span class="auto-style57">
 NAVIGATION FÜR DIE MEDIENFREIGABE VON SAVETHEINTERNET.INFO<br />
 Bei Fragen/Problemen etc. bitte im 
-<a href="https://discord.savetheinternet.info">Discord</a> bei Flashyy/Soldiermelly melden.<br />
-<br />
+<a href="http://discord.savetheinternet.info">Discord</a> bei Flashyy/Soldiermelly melden.<br />
+-&gt; discord.savetheinternet.info<br />
 <br />
 </span><br class="auto-style57" />
 </p>
