Raus mit den Bannern

--- a/index.html
+++ b/index.html
@@ -245,16 +245,16 @@ Logos</span></a>
 <br />
 <br />
 <br />
-Banner:<br />
+Banner: (werden reworkt)<br />
 <br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -#SAVEYOURINTERNET 
 </strong>200x70cm
-<strong>(</strong><a href="Flyer/Banner/Banner200x70.png"><strong>PNG</strong></a><strong> 
-| </strong><a href="Flyer/Banner/Banner200x70.pdf"><strong>PDF</strong></a>)<br />
+<strong>(PNG 
+| PDF</strong>)<br />
 <br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <strong>&nbsp;-Altes Low Effort Banner</strong> 
-200x70cm<strong> (<a href="Flyer/Banner/BannerAltPNG.png">PNG</a> |
-<a href="Flyer/Banner/BannerAltPDF.pdf">PDF</a>) </strong>für geringe 
+200x70cm<strong> (PNG |
+PDF) </strong>für geringe 
 Druckkosten ;)<br />
 </span>
 </p>
