--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ https://goo.gl/forms/GDgE1W0WukdAhmET2</a><br />
 </strong><span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
 -Bremen<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </strong>
-<a href="Flyer/Demos/BREMEN-finalprint2.pdf">Vorderseite</a> |
+Vorderseite |
 <a href="Flyer/RUECKSEITE.pdf">Rückseite</a></span><strong><br class="auto-style57" />
 <br class="auto-style57" />
 </strong><span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
