--- a/Anderes.html
+++ b/Anderes.html
@@ -54,10 +54,6 @@ a {
 	background-color: #FFFFFF;
 	font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
-.auto-style60 {
-	color: #FFBF00;
-	text-decoration: underline;
-}
 .auto-style61 {
 	text-decoration: none;
 }
@@ -86,7 +82,7 @@ Hier gibts Logos etc.</span><br class="auto-style57" />
 <br class="auto-style57" />
 <br class="auto-style57" />
 <br class="auto-style57" />
-<span class="auto-style57"><a href="Anderes/LOGO_frei.png"><strong>L</strong></a><span class="auto-style60"><strong>ogo</strong></span></span><br class="auto-style57" />
+<span class="auto-style57"><a href="Anderes/LOGO_frei.png"><strong>Logo</strong></a></span><br class="auto-style57" />
 <br />
 <span class="auto-style57"><strong><a href="Anderes/Saveyourinternet.png">#Saveyourinternet</a><br />
 <br />
