--- a/index.html
+++ b/index.html
@@ -242,6 +242,10 @@ Logos</span></a>
 <a href="Flyer/Demos/WIEN-finalprint.pdf">Vorderseite</a> |
 <a href="Flyer/RUECKSEITE.pdf">Rückseite</a><strong><br />
 <br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Zürich<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+</strong><a href="Flyer/Demos/ZUERICH-finalprint.pdf">Vorderseite</a> |
+<a href="Flyer/RUECKSEITE.pdf">Rückseite</a><strong><br />
 <br />
 <br />
 <br />
