--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@ a {
 .auto-style63 {
 	color: #FFBF00;
 }
+.auto-style64 {
+	font-size: small;
+}
 </style>
 </head>
 
@@ -266,10 +269,11 @@ Druckkosten ;)<br />
 <span class="auto-style57"><br />
 <br />
 <br />
-Wir fordern jeden auf, nur die von uns freigegebenen Werbemittel an gestatteten 
-Orten zu nutzen und zu verbreiten. Wir distanzieren uns von jeglichen fremden 
-Werbemitteln und deren Anbringung an rechtswidrigen Flächen. Zusätzlich 
-übernehmen wir keinerlei Haftung für dadurch entstandene Schäden.<br />
+<span class="auto-style64">Wir fordern jeden auf, nur die von uns freigegebenen 
+Werbemittel an dafür gestatteten Orten zu nutzen und zu verbreiten. Wir 
+distanzieren uns von jeglichen fremden Werbemitteln und deren widerrechtlichen 
+Anbringung oder Verbreitung. Desweiteren übernehmen wir keinerlei Haftung für 
+durch eine rechtswidrige Verbreitung entstandene Schäden.</span><br />
 <br />
 <a href="https://savetheinternet.info/imprint">Impressum</a><br />
 </span><br class="auto-style57" />
