--- a/index.html
+++ b/index.html
@@ -216,9 +216,7 @@ Logos</span></a>
 <br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Leipzig<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </strong>
-<a href="Flyer/Demos/LEIPZIG/LEIPZIG-finalprint.pdf">O<span class="auto-style63">hne 
-Logos</span></a> 
-| <a href="Flyer/Demos/LEIPZIG/LEIPZIG.LOGOS2.pdf">Mit Logos</a> | <a href="Flyer/RUECKSEITE.pdf">Rückseite</a><strong><br />
+<a href="Flyer/Demos/LEIPZIG/DEMOFLYER-update.pdf">Mit Logos</a> | <a href="Flyer/RUECKSEITE.pdf">Rückseite</a><strong><br />
 <br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -München<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </strong>
