--- a/index.html
+++ b/index.html
@@ -118,8 +118,9 @@ Infoflyer<br />
 <a href="Flyer/NIGHTY/NIGHTY-BACKneu.pdf">Rückseite</a><strong><br />
 </strong></span>
 <br class="auto-style57" />
-<span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Demo Flyer mit Karte</strong><em> (work in 
-progress...)</em></span><br />
+<span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Demo Flyer mit Karte</strong></span><br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span class="auto-style57">
+<a href="Flyer/MELLY/PRINTTEMP.pdf">Karte</a> | Liste (work in progress)</span><br />
 <br />
 <br class="auto-style57" />
 <span class="auto-style57"><strong>Einzeldemos <br />
