--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@ Infoflyer<br />
 <br class="auto-style57" />
 <span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Demo Flyer mit Karte</strong></span><br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span class="auto-style57">
-<a href="Flyer/MELLY/PRINTTEMP.pdf">Karte</a> | Liste (work in progress)</span><br />
+<a href="Flyer/MELLY/PRINTTEMP.pdf">V<span class="auto-style63">oderderseite</span></a> 
+| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a></span><br />
 <br />
 <br class="auto-style57" />
 <span class="auto-style57"><strong>Einzeldemos <br />
