--- a/SocialMedia.html
+++ b/SocialMedia.html
@@ -93,10 +93,11 @@ Uns ist bewusst, dass man das mit einem Formular hätte lösen können aber...</
 <span class="auto-style57">Der Header ist an sich zu groß, was nicht schlimm 
 ist, weil Facebook den zuschneidet.<br />
 </span><br />
-<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<strong>Dresden</strong> 
-(<a href="SocialMedia/Dresden-fix.png">Mit Logos</a>)</span><br class="auto-style57" />
+<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<strong>Dresden</strong></span><br class="auto-style57" />
 <br class="auto-style57" />
-<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -</span><br />
+<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<strong><a href="SocialMedia/LEIPZIG.png">Leipzig</a></strong><br />
+<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<strong><a href="SocialMedia/MUENCHEN.png">München</a></strong></span><br />
 </p>
 
 </body>
