--- a/SocialMedia.html
+++ b/SocialMedia.html
@@ -81,8 +81,8 @@ a {
 <p class="auto-style54" style="width: 876px"><br />
 <br />
 <br />
-<span class="auto-style57"><a href="Webseitenstuff/Facebook-HeaderClean3.png">
-<strong>Facebook Banner für die Demos</strong></a></span><br class="auto-style57" />
+<span class="auto-style57">
+<strong>Facebook Banner für die Demos</strong></span><br class="auto-style57" />
 <br />
 <span class="auto-style57">Banner für eure örtlichen Demos bitte hier Anfragen:</span><br class="auto-style57" />
 <span class="auto-style57"><a href="https://goo.gl/forms/xpHP0kNIDYSZnvjM2">
@@ -92,12 +92,18 @@ Uns ist bewusst, dass man das mit einem Formular hätte lösen können aber...</
 <br />
 <span class="auto-style57">Der Header ist an sich zu groß, was nicht schlimm 
 ist, weil Facebook den zuschneidet.<br />
-</span><br />
-<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<strong>Dresden</strong></span><br class="auto-style57" />
-<br class="auto-style57" />
-<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<strong><a href="SocialMedia/LEIPZIG.png">Leipzig</a></strong><br />
 <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<strong><a href="SocialMedia/MUENCHEN.png">München</a></strong></span><br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/GERMAN.png"><strong>Allgemen 
+(De)</strong></a><br />
+<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/FRENCH.png"><strong>Allgemein 
+(Fr)</strong></a><br />
+</span><br />
+<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/DRESDEN.png">Dresden</a></span><br class="auto-style57" />
+<br class="auto-style57" />
+<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/LEIPZIG.png">Leipzig</a><br />
+<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/MUENCHEN.png">München</a></span><br />
 </p>
 
 </body>
