--- a/SocialMedia.html
+++ b/SocialMedia.html
@@ -104,6 +104,12 @@ ist, weil Facebook den zuschneidet.<br />
 <span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/LEIPZIG.png">Leipzig</a><br />
 <br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/MUENCHEN.png">München</a></span><br />
+<br class="auto-style57" />
+<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/FRANKFURT.png">Frankfurt</a></span><br class="auto-style57" />
+<br class="auto-style57" />
+<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/HANNOVER.png">Hannover</a></span><br class="auto-style57" />
+<br class="auto-style57" />
+<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/SAARBRUECKEN.png">Saarbrücken</a></span><br />
 </p>
 
 </body>
