--- a/SocialMedia.html
+++ b/SocialMedia.html
@@ -110,6 +110,8 @@ ist, weil Facebook den zuschneidet.<br />
 <span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/HANNOVER.png">Hannover</a></span><br class="auto-style57" />
 <br class="auto-style57" />
 <span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/SAARBRUECKEN.png">Saarbrücken</a></span><br />
+<br />
+<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/DORTMUND.png">Dortmund</a></span><br />
 </p>
 
 </body>
