--- a/SocialMedia.html
+++ b/SocialMedia.html
@@ -93,7 +93,7 @@ Uns ist bewusst, dass man das mit einem Formular hätte lösen können aber...</
 <span class="auto-style57">Der Header ist an sich zu groß, was nicht schlimm 
 ist, weil Facebook den zuschneidet.<br />
 <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/GERMAN.png"><strong>Allgemen 
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/GERMAN.png"><strong>Allgemein 
 (De)</strong></a><br />
 <br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/FRENCH.png"><strong>Allgemein 
