--- a/index.html
+++ b/index.html
@@ -142,14 +142,18 @@ https://goo.gl/forms/GDgE1W0WukdAhmET2</a><br />
 -Bremen<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </strong>
 Vorderseite |
-<a href="Flyer/RUECKSEITE.pdf">Rückseite</a></span><strong><br class="auto-style57" />
+<a href="Flyer/RUECKSEITE.pdf">Rückseite</a></span><strong><br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</strong><span class="auto-style57">(Warten auf Bündnispartner)</span><strong><br class="auto-style57" />
 <br class="auto-style57" />
 </strong><span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
 -</strong></span><span class="auto-style57"><strong>Dortmund<span class="auto-style61"> 
 <br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="Flyer/Demos/DORTMUND-finalprint.pdf">Vorderseite</a> 
-| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a></span><br />
+<a href="Flyer/Demos/DORTMUND/DORTMUND-finalprint.pdf">Ohne Logos</a> 
+| Mit Logos | <a href="Flyer/RUECKSEITE.pdf">Rückseite</a> <br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; (Ich gucke gerade, ob jmd eines der 
+Logos fixen kann)</span><br />
 <br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Dresden<br />
 <span class="auto-style61"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -159,8 +163,9 @@ Logos</a> | <a href="Flyer/Demos/Dresden/DRESDEN-logos.pdf">Mit Logos</a>
 <br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Düsseldorf<br />
 <span class="auto-style61">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="Flyer/Demos/Duesseldorf-finalprint.pdf">Vorderseite</a> 
-| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a><br />
+<a href="Flyer/Demos/DUESSELDORF/Duesseldorf-finalprint.pdf">Oh<span class="auto-style63">ne 
+Logos</span></a> 
+| <a href="Flyer/Demos/DUESSELDORF/DUESSELDORF.pdf">Mit Logos</a> | <a href="Flyer/RUECKSEITE.pdf">Rückseite</a><br />
 </span>
 <br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Erfurt<br />
