--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@ Infoflyer<br />
 <br />
 <br class="auto-style57" />
 <span class="auto-style57"><strong>Einzeldemos <br />
+&nbsp;&nbsp;&nbsp; </strong><em><strong>Regionalleiter/Demoorganisatoren:</strong></em><strong><br />
 &nbsp;&nbsp;&nbsp; </strong>Logos der 
 Bündnispartner werden auf Nachfrage eingebaut. Gerne könnt ihr das Formular 
 dafür nutzen:<br />
@@ -263,17 +264,16 @@ Logos</span></a>
 <br />
 <br />
 <br />
-Banner: (werden reworkt)<br />
+Banner: (Bitte noch nicht drucken, da neue Größen und Designs hinzukommen!)<br />
 <br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -#SAVEYOURINTERNET 
 </strong>200x70cm
-<strong>(PNG 
-| PDF</strong>)<br />
+<strong>(<a href="Flyer/Banner/Banner200x70.png">PNG</a> 
+| <a href="Flyer/Banner/Banner200x70.pdf">PDF</a></strong>)<br />
 <br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <strong>&nbsp;-Altes Low Effort Banner</strong> 
-200x70cm<strong> (PNG |
-PDF) </strong>für geringe 
-Druckkosten ;)<br />
+200x70cm<strong> (<a href="Flyer/Banner/BannerAltPNG.png">PNG</a> |
+<a href="Flyer/Banner/BannerAltPDF.pdf">PDF</a>) </strong><br />
 </span>
 </p>
 <p class="auto-style60" style="width: 876px"><br />
