--- a/index.html
+++ b/index.html
@@ -142,10 +142,8 @@ https://goo.gl/forms/GDgE1W0WukdAhmET2</a><br />
 </strong><span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
 -Bremen<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </strong>
-Vorderseite |
-<a href="Flyer/RUECKSEITE.pdf">Rückseite</a></span><strong><br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</strong><span class="auto-style57">(Warten auf Bündnispartner)</span><strong><br class="auto-style57" />
+<a href="Flyer/Demos/BREMEN-finalprint2.pdf">Vorderseite</a> |
+<a href="Flyer/RUECKSEITE.pdf">Rückseite</a></span><strong><br class="auto-style57" />
 <br class="auto-style57" />
 </strong><span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
 -</strong></span><span class="auto-style57"><strong>Dortmund<span class="auto-style61"> 
