--- a/SocialMedia.html
+++ b/SocialMedia.html
@@ -79,19 +79,14 @@ a {
 	</tr>
 </table>
 <p class="auto-style54" style="width: 876px"><br />
+<span class="auto-style57">Ihr braucht irgendwas?-&gt;
+<a href="https://goo.gl/forms/0kB4umt1o9Y4HVxg1">
+https://goo.gl/forms/0kB4umt1o9Y4HVxg1</a><br />
+</span>
 <br />
 <br />
 <span class="auto-style57">
-<strong>Facebook Banner für die Demos</strong></span><br class="auto-style57" />
-<br />
-<span class="auto-style57">Banner für eure örtlichen Demos bitte hier Anfragen:</span><br class="auto-style57" />
-<span class="auto-style57"><a href="https://goo.gl/forms/xpHP0kNIDYSZnvjM2">
-https://goo.gl/forms/xpHP0kNIDYSZnvjM2</a></span><br class="auto-style57" />
-<span class="auto-style57">Geht nur um die, die keinen Flyer brauchen, sich aber einen FB Banner wünschen.<br />
-Uns ist bewusst, dass man das mit einem Formular hätte lösen können aber...</span><br class="auto-style57" />
-<br />
-<span class="auto-style57">Der Header ist an sich zu groß, was nicht schlimm 
-ist, weil Facebook den zuschneidet.<br />
+<strong>Facebook Banner für die Demos</strong><br />
 <br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/GERMAN.png"><strong>Allgemein 
 (De)</strong></a><br />
