--- a/index.html
+++ b/index.html
@@ -262,7 +262,15 @@ Logos</span></a>
 <br />
 <br />
 <br />
-Banner: (Bitte noch nicht drucken, da neue Größen und Designs hinzukommen!)<br />
+Banner: <br />
+<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -#SAVEYOURINTERNET 
+</strong>(<a href="Flyer/Banner/Saveyourinternet/3x075_1.pdf">3x0,75</a> |
+<a href="Flyer/Banner/Saveyourinternet/4x075_2.pdf">4x0,75</a> | <strong><br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Für ein freies Internet 
+</strong>(<a href="Flyer/Banner/FreiesInternet/3x075_2.pdf">3x0,75</a> |
+<a href="Flyer/Banner/FreiesInternet/4x075_1.pdf">4x0,75</a> |<strong><br />
 <br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -#SAVEYOURINTERNET 
 </strong>200x70cm
