--- a/index.html
+++ b/index.html
@@ -268,21 +268,28 @@ Banner: <br />
 </strong>(<a href="Flyer/Banner/Saveyourinternet/3x075_1.pdf">3x0,75</a> |
 <a href="Flyer/Banner/Saveyourinternet/4x075_2.pdf">4x0,75</a> |
 <a href="Flyer/Banner/FreiesInternet/5x075_1.pdf">5x075</a> |
-<a href="Flyer/Banner/FreiesInternet/5x1_1.pdf">5x1</a> |<strong><br />
+<a href="Flyer/Banner/FreiesInternet/5x1_1.pdf">5x1</a> |
+<a href="Flyer/Banner/Saveyourinternet/6x1_1.pdf">6x1</a> |
+<a href="Flyer/Banner/Saveyourinternet/demobanner1zu2-7mal1-v1.pdf">7x1</a>)<strong><br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Für ein freies Internet </strong>(<a href="Flyer/Banner/FreiesInternet/3x075_2.pdf">3x0,75</a> 
 | <a href="Flyer/Banner/FreiesInternet/4x075_1.pdf">4x0,75</a> |
 <a href="Flyer/Banner/Saveyourinternet/5x075_2.pdf">5x075</a> |
-<a href="Flyer/Banner/Saveyourinternet/5x1_2.pdf">5x1</a> |<strong><br />
+<a href="Flyer/Banner/Saveyourinternet/5x1_2.pdf">5x1</a> |
+<a href="Flyer/Banner/FreiesInternet/6x1_2.pdf">6x1</a> |
+<a href="Flyer/Banner/FreiesInternet/demobanner1zu2-7mal1-v2.pdf">7x1</a>)<strong><br />
 <br />
+<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+</strong>Outdated:<strong><br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -#SAVEYOURINTERNET 
 </strong>200x70cm
-<strong>(<a href="Flyer/Banner/Banner200x70.png">PNG</a> 
-| <a href="Flyer/Banner/Banner200x70.pdf">PDF</a></strong>)<br />
+(<a href="Flyer/Banner/Banner200x70.png">PNG</a> 
+| <a href="Flyer/Banner/Banner200x70.pdf">PDF</a>)<br />
 <br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <strong>&nbsp;-Altes Low Effort Banner</strong> 
-200x70cm<strong> (<a href="Flyer/Banner/BannerAltPNG.png">PNG</a> |
-<a href="Flyer/Banner/BannerAltPDF.pdf">PDF</a>) </strong><br />
+200x70cm (<a href="Flyer/Banner/BannerAltPNG.png">PNG</a> |
+<a href="Flyer/Banner/BannerAltPDF.pdf">PDF</a>) <br />
 </span>
 </p>
 <p class="auto-style60" style="width: 876px"><br />
