--- a/index.html
+++ b/index.html
@@ -263,6 +263,10 @@ Logos</span></a>
 <br />
 <br />
 Banner: <br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+</strong>Probleme? Andere Größen notwendig? -&gt; Ansprechpartner: <strong>tian_b / 
+Melly / Flashyy<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </strong>Angaben in Meter<strong>:<br />
 <br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -#SAVEYOURINTERNET 
 </strong>(<a href="Flyer/Banner/Saveyourinternet/3x075_1.pdf">3x0,75</a> |
@@ -280,16 +284,14 @@ Banner: <br />
 <a href="Flyer/Banner/FreiesInternet/demobanner1zu2-7mal1-v2.pdf">7x1</a>)<strong><br />
 <br />
 <br />
+<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
 </strong>Outdated:<strong><br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -#SAVEYOURINTERNET 
-</strong>200x70cm
-(<a href="Flyer/Banner/Banner200x70.png">PNG</a> 
-| <a href="Flyer/Banner/Banner200x70.pdf">PDF</a>)<br />
+(</strong><a href="Flyer/Banner/Banner200x70.pdf">2x0,7</a>)<br />
 <br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <strong>&nbsp;-Altes Low Effort Banner</strong> 
-200x70cm (<a href="Flyer/Banner/BannerAltPNG.png">PNG</a> |
-<a href="Flyer/Banner/BannerAltPDF.pdf">PDF</a>) <br />
+(<a href="Flyer/Banner/BannerAltPDF.pdf">2x0,7</a>)<br />
 </span>
 </p>
 <p class="auto-style60" style="width: 876px"><br />
