--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@ a {
 .auto-style64 {
 	font-size: small;
 }
+.auto-style65 {
+	font-size: x-large;
+}
 </style>
 </head>
 
@@ -106,13 +109,12 @@ Bei Fragen/Problemen etc. bitte im
 </span><br class="auto-style57" />
 </p>
 <p class="auto-style54" style="width: 876px"><span class="auto-style62"><strong>
-FLYER/BANNER</strong></span><br />
+FLYER/BANNER/PLAKATE</strong></span><br />
 <br class="auto-style57" />
-<span class="auto-style57"><strong>Standardflyer</strong> (A6, 1mm Rand, CMYK, 
+<span class="auto-style57"><strong><span class="auto-style65">Flyer</span></strong> (A6, 1mm Rand, CMYK, 
 300dpi)</span><br class="auto-style57" />
 <br class="auto-style57" />
-<span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -A6 
-Infoflyer<br />
+<span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Infoflyer<br />
 </strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="Flyer/NIGHTY/NIGHTY-FRONT.pdf">Vorderseite</a> |
 <a href="Flyer/NIGHTY/NIGHTY-BACKneu.pdf">Rückseite</a><strong><br />
@@ -124,14 +126,14 @@ Infoflyer<br />
 | <a href="Flyer/RUECKSEITE.pdf">Rückseite</a></span><br />
 <br />
 <br class="auto-style57" />
-<span class="auto-style57"><strong>Einzeldemos <br />
-&nbsp;&nbsp;&nbsp; </strong><em><strong>Regionalleiter/Demoorganisatoren:</strong></em><strong><br />
-&nbsp;&nbsp;&nbsp; </strong>Logos der 
+<span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Einzeldemos <br />
+&nbsp;&nbsp;&nbsp; </strong><em><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Regionalleiter/Demoorganisatoren:</strong></em><strong><br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </strong>Logos der 
 Bündnispartner werden auf Nachfrage eingebaut. Gerne könnt ihr das Formular 
 dafür nutzen:<br />
-&nbsp;&nbsp;&nbsp; <a href="https://goo.gl/forms/GDgE1W0WukdAhmET2">
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://goo.gl/forms/GDgE1W0WukdAhmET2">
 https://goo.gl/forms/GDgE1W0WukdAhmET2</a><br />
-&nbsp;&nbsp;&nbsp; Bitte auch die Richtigkeit der Angaben auf den Flyern überprüfen!</span><strong><br class="auto-style57" />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Bitte auch die Richtigkeit der Angaben auf den Flyern überprüfen!</span><strong><br class="auto-style57" />
 <br class="auto-style57" />
 </strong><span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
 -Berlin <br />
@@ -262,7 +264,8 @@ Logos</span></a>
 <br />
 <br />
 <br />
-Banner: <br />
+<span class="auto-style65">Banner: <br />
+</span> <br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
 </strong>Probleme? Andere Größen notwendig? -&gt; Ansprechpartner: <strong>tian_b / 
 Melly / Flashyy<br />
@@ -292,6 +295,16 @@ Melly / Flashyy<br />
 <br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <strong>&nbsp;-Altes Low Effort Banner</strong> 
 (<a href="Flyer/Banner/BannerAltPDF.pdf">2x0,7</a>)<br />
+<br />
+<br />
+<strong><span class="auto-style65">A1 Plakate:</span></strong> <br />
+<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Bitte bei tian_b/ Flashyy/ Melly in 
+Auftrag geben!<br />
+<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="Flyer/Plakate/plakat_neutral.jpg">Beispiel</a><br />
+<br />
 </span>
 </p>
 <p class="auto-style60" style="width: 876px"><br />
