--- a/SocialMedia.html
+++ b/SocialMedia.html
@@ -98,7 +98,7 @@ https://goo.gl/forms/0kB4umt1o9Y4HVxg1</a><br />
 <br class="auto-style57" />
 <span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/LEIPZIG.png">Leipzig</a><br />
 <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/MUENCHEN.png">München</a></span><br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/münchenNeu.jpg">München</a></span><br />
 <br class="auto-style57" />
 <span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/FRANKFURT.png">Frankfurt</a></span><br class="auto-style57" />
 <br class="auto-style57" />
