Dormund und Hamburg Flyer

--- a/index.html
+++ b/index.html
@@ -152,9 +152,7 @@ https://goo.gl/forms/GDgE1W0WukdAhmET2</a><br />
 <br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="Flyer/Demos/DORTMUND/DORTMUND-finalprint.pdf">Ohne Logos</a> 
-| Mit Logos | <a href="Flyer/RUECKSEITE.pdf">Rückseite</a> <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; (Ich gucke gerade, ob jmd eines der 
-Logos fixen kann)</span><br />
+| <a href="Flyer/Demos/DORTMUND/DORTMUNDLOGOS.pdf">Mit Logos</a> | <a href="Flyer/RUECKSEITE.pdf">Rückseite</a> </span><br />
 <br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Dresden<br />
 <span class="auto-style61"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -190,7 +188,8 @@ Rückseite</a><strong><br />
 </strong><span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
 -Hamburg<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </strong>
-<a href="Flyer/Demos/HAMBURG-finalprint.pdf">Vorderseite</a> |
+<a href="Flyer/Demos/HAMBURG/HAMBURG-finalprint.pdf">Vorderseite</a> |
+<a href="Flyer/Demos/HAMBURG/HAMBURGLOGOS.pdf">Mit Logos</a> |
 <a href="Flyer/RUECKSEITE.pdf">Rückseite</a><strong><br />
 <br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Hannover<br />
