--- a/SocialMedia.html
+++ b/SocialMedia.html
@@ -94,19 +94,27 @@ https://goo.gl/forms/0kB4umt1o9Y4HVxg1</a><br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/FRENCH.png"><strong>Allgemein 
 (Fr)</strong></a><br />
 </span><br />
-<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/DRESDEN.png">Dresden</a></span><br class="auto-style57" />
+<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/Banner/BREMEN.png">Bremen</a></span><br class="auto-style57" />
 <br class="auto-style57" />
-<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/LEIPZIG.png">Leipzig</a><br />
-<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/muenchenNeu.jpg">München</a></span><br />
+<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/Banner/DORTMUND.png">Dortmund</a></span><br class="auto-style57" />
 <br class="auto-style57" />
-<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/FRANKFURT.png">Frankfurt</a></span><br class="auto-style57" />
+<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/Banner/DRESDEN.png">Dresden</a></span><br class="auto-style57" />
 <br class="auto-style57" />
-<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/HANNOVER.png">Hannover</a></span><br class="auto-style57" />
+<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/Banner/DUESSELDORF.png">Düsseldorf</a></span><br class="auto-style57" />
 <br class="auto-style57" />
-<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/SAARBRUECKEN.png">Saarbrücken</a></span><br />
-<br />
-<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/DORTMUND.png">Dortmund</a></span><br />
+<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/Banner/FRANKFURT.png">Frankfurt</a></span><br class="auto-style57" />
+<br class="auto-style57" />
+<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/Banner/HAMBURG.png">Hamburg</a></span><br class="auto-style57" />
+<br class="auto-style57" />
+<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/Banner/HANNOVER.png">Hannover</a></span><br class="auto-style57" />
+<br class="auto-style57" />
+<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/Banner/LEIPZIG.png">Leipzig</a></span><br class="auto-style57" />
+<br class="auto-style57" />
+<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/Banner/MAGDEBURG.png">Magdeburg</a></span><br class="auto-style57" />
+<br class="auto-style57" />
+<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/Banner/muenchenNeu.jpg">München</a></span><br class="auto-style57" />
+<br class="auto-style57" />
+<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/Banner/SAARBRUECKEN.png">Saarbrücken</a></span><br />
 </p>
 
 </body>
