--- a/Anderes.html
+++ b/Anderes.html
@@ -78,7 +78,7 @@ a {
 <p class="auto-style54" style="width: 876px"><span class="auto-style57">
 Build-Yourself-Plakat</span><br />
 <br />
-<img alt="Anleitung" class="auto-style62" height="339" src="Anderes/BuildYourself/BuildYourselfSign_Anleitung.png" style="float: left" width="546" /><br />
+<img alt="Anleitung" class="auto-style62" height="412" src="Anderes/BuildYourself/BuildYourselfSign_Anleitung.png" style="float: left" width="669" /><br />
 <br />
 <br />
 <br />
@@ -102,7 +102,13 @@ Build-Yourself-Plakat</span><br />
 <br />
 <br />
 <br />
-<span class="auto-style57"><strong><a href="Anderes/LOGO_frei.png">Logo</a></strong></span><br class="auto-style57" />
+<br />
+<br />
+<br />
+<br />
+</p>
+<p class="auto-style54" style="width: 876px"><span class="auto-style57"><strong>
+<a href="Anderes/LOGO_frei.png">Logo</a></strong></span><br class="auto-style57" />
 <br />
 <span class="auto-style57"><strong><a href="Anderes/Saveyourinternet.png">#Saveyourinternet</a><br />
 <br />
