--- a/SocialMedia.html
+++ b/SocialMedia.html
@@ -113,6 +113,8 @@ https://goo.gl/forms/0kB4umt1o9Y4HVxg1</a><br />
 <span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/Banner/MAGDEBURG.png">Magdeburg</a></span><br class="auto-style57" />
 <br class="auto-style57" />
 <span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/Banner/muenchenNeu.jpg">München</a></span><br class="auto-style57" />
+<br />
+<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/Banner/NUERNBERG.png">Nürnberg</a></span><br />
 <br class="auto-style57" />
 <span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/Banner/SAARBRUECKEN.png">Saarbrücken</a></span><br />
 </p>
