--- a/SocialMedia.html
+++ b/SocialMedia.html
@@ -114,7 +114,9 @@ https://goo.gl/forms/0kB4umt1o9Y4HVxg1</a><br />
 <br class="auto-style57" />
 <span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/Banner/muenchenNeu.jpg">München</a></span><br class="auto-style57" />
 <br />
-<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/Banner/NUERNBERG.png">Nürnberg</a></span><br />
+<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Nürnberg:
+<a href="SocialMedia/Banner/NUERNBERG.png">FB Header</a> |
+<a href="SocialMedia/NuernbergAnnouncer.png">Announcer</a> (Twitter/Insta....)</span><br />
 <br class="auto-style57" />
 <span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/Banner/SAARBRUECKEN.png">Saarbrücken</a></span><br />
 </p>
