--- a/SocialMedia.html
+++ b/SocialMedia.html
@@ -59,6 +59,9 @@ a {
 	color: #0E2036;
 	background-color: #FFFFFF;
 }
+.auto-style61 {
+	color: #FFBF00;
+}
 </style>
 </head>
 
@@ -116,7 +119,8 @@ https://goo.gl/forms/0kB4umt1o9Y4HVxg1</a><br />
 <br />
 <span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Nürnberg:
 <a href="SocialMedia/Banner/NUERNBERG.png">FB Header</a> |
-<a href="SocialMedia/NuernbergAnnouncer.png">Announcer</a> (Twitter/Insta....)</span><br />
+<a href="SocialMedia/NuernbergAnnouncer.png">G<span class="auto-style61">rafik</span></a> 
+(Twitter/Insta....)</span><br />
 <br class="auto-style57" />
 <span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/Banner/SAARBRUECKEN.png">Saarbrücken</a></span><br />
 </p>
