--- a/index.html
+++ b/index.html
@@ -140,6 +140,12 @@ https://goo.gl/forms/GDgE1W0WukdAhmET2</a><br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </strong>
 <a href="Flyer/Demos/BERLIN-finalprint.pdf">Vorderseite</a> |
 <a href="Flyer/RUECKSEITE.pdf">Rückseite</a></span><strong><br class="auto-style57" />
+<br />
+&nbsp;<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Bielefeld</span><br class="auto-style57" />
+<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>
+</strong><span class="auto-style57">
+<a href="Flyer/Demos/BIELEFELD-finalprint.pdf">Vorderseite</a> |
+<a href="Flyer/RUECKSEITE.pdf">Rückseite</a></span><strong><br class="auto-style57" />
 <br class="auto-style57" />
 </strong><span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
 -Bremen<br />
