--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@ Logos</span></a>
 <br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Kiel<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </strong>
-<a href="Flyer/Demos/KIEL-finalprint.pdf">Vorderseite</a> 
-| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a><strong><br />
+<a href="Flyer/Demos/KIEL/KIEL-finalprint.pdf">Mit Logos</a> 
+| <a href="Flyer/Demos/KIEL/KIEL-LOGOS.pdf">Ohne Logos</a> | <a href="Flyer/RUECKSEITE.pdf">Rückseite</a><strong><br />
 <br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Koblenz<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
