--- a/Anderes.html
+++ b/Anderes.html
@@ -95,11 +95,12 @@ Build-Yourself-Plakat</span><br />
 <a href="Anderes/BuildYourself/BuildYourselfSign_Unten.pdf">PDF</a></span><br />
 <br />
 <br />
-<br />
-<br />
-<br />
-<br />
-<br />
+&nbsp;&nbsp;&nbsp; <span class="auto-style57"><strong>In A4 zerstückelt:</strong></span><br class="auto-style57" />
+<span class="auto-style57">&nbsp;&nbsp;&nbsp;
+<a href="Anderes/BuildYourself/a4/BuildYourselfSign_ObenGeteilt.pdf">Oben</a> |
+<a href="Anderes/BuildYourself/a4/BuildYourselfSign_UntenGeteilt.pdf">Unten</a></span><br class="auto-style57" />
+<br class="auto-style57" />
+<span class="auto-style57">&nbsp;</span><br />
 <br />
 <br />
 <br />
