--- a/index.html
+++ b/index.html
@@ -63,9 +63,6 @@ a {
 	text-align: center;
 	margin-left: 440px;
 }
-.auto-style61 {
-	font-weight: normal;
-}
 .auto-style62 {
 	font-family: Raleway;
 	font-size: x-large;
@@ -134,151 +131,12 @@ dafür nutzen:<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://goo.gl/forms/GDgE1W0WukdAhmET2">
 https://goo.gl/forms/GDgE1W0WukdAhmET2</a><br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Bitte auch die Richtigkeit der Angaben auf den Flyern überprüfen!</span><strong><br class="auto-style57" />
+<br />
+<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span class="auto-style57">&nbsp;<a href="staedteflyer.html">&gt;Zur 
+Städteübersicht</a></span><br />
 <br class="auto-style57" />
-</strong><span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
--Berlin <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </strong>
-<a href="Flyer/Demos/BERLIN-finalprint.pdf">Vorderseite</a> |
-<a href="Flyer/RUECKSEITE.pdf">Rückseite</a></span><strong><br class="auto-style57" />
-<br />
-&nbsp;<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Bielefeld</span><br class="auto-style57" />
-<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>
-</strong><span class="auto-style57">
-<a href="Flyer/Demos/BIELEFELD-finalprint.pdf">Vorderseite</a> |
-<a href="Flyer/RUECKSEITE.pdf">Rückseite</a></span><strong><br class="auto-style57" />
-<br class="auto-style57" />
-</strong><span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
--Bremen<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </strong>
-<a href="Flyer/Demos/BREMEN-finalprint2.pdf">Vorderseite</a> |
-<a href="Flyer/RUECKSEITE.pdf">Rückseite</a></span><strong><br class="auto-style57" />
-<br class="auto-style57" />
-</strong><span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
--</strong></span><span class="auto-style57"><strong>Dortmund<span class="auto-style61"> 
-<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="Flyer/Demos/DORTMUND/DORTMUND-finalprint.pdf">Ohne Logos</a> 
-| <a href="Flyer/Demos/DORTMUND/DORTMUNDLOGOS.pdf">Mit Logos</a> | <a href="Flyer/RUECKSEITE.pdf">Rückseite</a> </span><br />
-<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Dresden<br />
-<span class="auto-style61"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="Flyer/Demos/Dresden/DRESDEN-finalprint.pdf">Ohne 
-Logos</a> | <a href="Flyer/Demos/Dresden/DRESDEN-logos.pdf">Mit Logos</a> 
-| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a></span><br />
-<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Düsseldorf<br />
-<span class="auto-style61">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="Flyer/Demos/DUESSELDORF/Duesseldorf-finalprint.pdf">Oh<span class="auto-style63">ne 
-Logos</span></a> 
-| <a href="Flyer/Demos/DUESSELDORF/DUESSELDORF.pdf">Mit Logos</a> | <a href="Flyer/RUECKSEITE.pdf">Rückseite</a><br />
-</span>
-<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Erfurt<br />
-<span class="auto-style61">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="Flyer/Demos/ERFURT-finalprint.pdf">Vorderseite</a> 
-| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a></span></strong></span><strong><br class="auto-style57" />
-<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span class="auto-style57">-Frankfurt<br />
-<span class="auto-style61"> 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="Flyer/Demos/FFM/FRANKFURT-finalprint.pdf">Ohne Logos</a> |
-<a href="Flyer/Demos/FFM/FFMversion2.pdf">Mit Logos</a> |
-<a href="Flyer/RUECKSEITE.pdf">Rückseite</a></span></span></strong><strong><br class="auto-style57" />
-<br />
-<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Graz</span><br class="auto-style57" />
-</strong><span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="Flyer/Demos/GRAZ.pdf">Vorderseite</a> | <a href="Flyer/RUECKSEITE.pdf">
-Rückseite</a><strong><br />
-</strong></span><strong>
-<br class="auto-style57" />
-</strong><span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
--Hamburg<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </strong>
-<a href="Flyer/Demos/HAMBURG/HAMBURG-finalprint.pdf">Vorderseite</a> |
-<a href="Flyer/Demos/HAMBURG/HAMBURGLOGOS.pdf">Mit Logos</a> |
-<a href="Flyer/RUECKSEITE.pdf">Rückseite</a><strong><br />
-<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Hannover<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </strong>
-<a href="Flyer/Demos/Hannover/HANNOVER-finalprint.pdf">O<span class="auto-style63">hne 
-Logos</span></a> 
-| <a href="Flyer/Demos/Hannover/Hannover_Logos.pdf">Mit Logos</a> | <a href="Flyer/RUECKSEITE.pdf">Rückseite</a><strong><br />
-<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Innsbruck<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </strong>
-<a href="Flyer/Demos/INNSBRUCK.pdf">Vorderseite</a> |
-<a href="Flyer/RUECKSEITE.pdf">Rückseite</a><strong><br />
-<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Karlsruhe<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </strong>
-<a href="Flyer/Demos/KARLSRUHE-finalprint.pdf">Vorderseite</a> 
-| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a><strong><br />
-<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Kassel<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </strong>
-<a href="Flyer/Demos/KASSEL-finalprint.pdf"><span class="auto-style63">Mit Logos</span></a><strong> 
-</strong>
-|<strong> 
-</strong>
-<a href="Flyer/RUECKSEITE.pdf">Rückseite</a><strong><br />
-<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Kiel<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </strong>
-<a href="Flyer/Demos/KIEL/KIEL-finalprint.pdf">Mit Logos</a> 
-| <a href="Flyer/Demos/KIEL/KIEL-LOGOS.pdf">Ohne Logos</a> | <a href="Flyer/RUECKSEITE.pdf">Rückseite</a><strong><br />
-<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Koblenz<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-</strong><a href="Flyer/Demos/KOBLENZ-finalprint.pdf">Vorderseite</a> 
-| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a><strong><br />
-<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Köln<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-</strong><a href="Flyer/Demos/KOELN-finalprint.pdf">Vorderseite</a> 
-| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a><br />
-<strong>
-<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Leipzig<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </strong>
-<a href="Flyer/Demos/LEIPZIG/DEMOFLYER-update.pdf">Mit Logos</a> | <a href="Flyer/RUECKSEITE.pdf">Rückseite</a><strong><br />
-<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -München<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </strong>
-<a href="Flyer/Demos/MUENCHEN/MUENCHEN-finalprint.pdf">O<span class="auto-style63">hne 
-Logos</span></a> 
-| <a href="Flyer/Demos/MUENCHEN/muc_a6_front_neu.pdf">Mit Logos</a> | <a href="Flyer/RUECKSEITE.pdf">Rückseite</a><strong><br />
-<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Nürnberg<br />
-</strong>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="Flyer/Demos/NUERNBERG-finalprint.pdf">Vorderseite</a> |
-<a href="Flyer/RUECKSEITE.pdf">Rückseite</a><strong><br />
-<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Rostock<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </strong>
-<a href="Flyer/Demos/ROSTOCK-finalprint.pdf">Vorderseite</a> 
-| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a><strong><br />
-<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Saarbrücken<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </strong>
-<a href="Flyer/Demos/SAARBRUECKEN-finalprint.pdf">Vorderseite</a> 
-| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a><strong><br />
-<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Stuttgart<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </strong>
-<a href="Flyer/Demos/STUTTGART-finalprint.pdf">Vorderseite</a> 
-| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a><strong><br />
-<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Wien<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </strong>
-<a href="Flyer/Demos/WIEN-finalprint.pdf">Vorderseite</a> |
-<a href="Flyer/RUECKSEITE.pdf">Rückseite</a><strong><br />
-<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Zürich<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-</strong><a href="Flyer/Demos/ZUERICH-finalprint.pdf">Vorderseite</a> |
-<a href="Flyer/RUECKSEITE.pdf">Rückseite</a><strong><br />
-<br />
+</strong><span class="auto-style57"><strong><br />
 <br />
 <br />
 <span class="auto-style65">Banner: <br />
@@ -312,6 +170,8 @@ Melly / Flashyy<br />
 <br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <strong>&nbsp;-Altes Low Effort Banner</strong> 
 (<a href="Flyer/Banner/BannerAltPDF.pdf">2x0,7</a>)<br />
+<br />
+<br />
 <br />
 <br />
 <strong><span class="auto-style65">A1 Plakate:</span></strong> <br />
